force-app/main/default/objects/MSA__c/MSA__c.object-meta.xml
<CustomObject>
    <description>Metropolitan Statistical Area</description>
    <label>MSA</label>
    <nameField>
        <label>MSA Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>