force-app/main/default/objects/MSA__c/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <description>Phone Area Code</description>
    <label>Area Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>