force-app/main/default/objects/MSA__c/fields/CBSA_Name__c.field-meta.xml
<CustomField>
    <fullName>CBSA_Name__c</fullName>
    <description>Core Based Statistical Area</description>
    <inlineHelpText>Core Based Statistical Area</inlineHelpText>
    <label>CBSA Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>