force-app/main/default/objects/MSA__c/fields/CBSA_Number__c.field-meta.xml
<CustomField>
    <fullName>CBSA_Number__c</fullName>
    <description>Core Based Statistical Area Number</description>
    <label>CBSA Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>