force-app/main/default/objects/MSA__c/fields/CBSA_Type__c.field-meta.xml
<CustomField>
    <fullName>CBSA_Type__c</fullName>
    <description>Core Based Statistical Area Type</description>
    <inlineHelpText>Core Based Statistical Area Type</inlineHelpText>
    <label>CBSA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>