force-app/main/default/objects/MSA__c/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <description>Combined Statistical Area</description>
    <inlineHelpText>Combined Statistical Area</inlineHelpText>
    <label>CSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>