force-app/main/default/objects/MSA__c/fields/CSA_Number__c.field-meta.xml
<CustomField>
    <fullName>CSA_Number__c</fullName>
    <description>Combined Statistical Area Number</description>
    <inlineHelpText>Combined Statistical Area Number</inlineHelpText>
    <label>CSA Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>