force-app/main/default/objects/MSA__c/fields/Longitude_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude_Latitude__c</fullName>
    <label>Longitude &amp; Latitude</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>