force-app/main/default/objects/MSA__c/fields/MA_Name__c.field-meta.xml
<CustomField>
    <fullName>MA_Name__c</fullName>
    <description>Metropolitan Area</description>
    <inlineHelpText>Metropolitan Area</inlineHelpText>
    <label>MA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>