force-app/main/default/objects/MSA__c/fields/MA_Number__c.field-meta.xml
<CustomField>
    <fullName>MA_Number__c</fullName>
    <description>Metropolitan Area Number</description>
    <inlineHelpText>Metropolitan Area Number</inlineHelpText>
    <label>MA Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>