force-app/main/default/objects/MSA__c/fields/Metropolitan_Area_Population__c.field-meta.xml
<CustomField>
    <fullName>Metropolitan_Area_Population__c</fullName>
    <description>Population within this Metropolitan Area (MA)</description>
    <inlineHelpText>Population within this Metropolitan Area (MA)</inlineHelpText>
    <label>Metropolitan Area Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>