force-app/main/default/objects/MSA__c/fields/MSA_Level__c.field-meta.xml
<CustomField>
    <fullName>MSA_Level__c</fullName>
    <description>Metropolitan Statistical Area Level</description>
    <inlineHelpText>Metropolitan Statistical Area Level</inlineHelpText>
    <label>MSA Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level A - Areas of 1 million or more</fullName>
            </value>
            <value>
                <fullName>Level B - Areas of 250,000 tp 999,999</fullName>
            </value>
            <value>
                <fullName>Level C - Areas of 100,00 to 249,999</fullName>
            </value>
            <value>
                <fullName>Level D - Areas of less than 100,00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>