force-app/main/default/objects/MSA__c/fields/MSA_Level_Letter__c.field-meta.xml
<CustomField>
    <fullName>MSA_Level_Letter__c</fullName>
    <description>Metropolitan Statistical Area Level Letter that comes from the Zip Data</description>
    <inlineHelpText>Metropolitan Statistical Area Level Letter that comes from the Zip Data</inlineHelpText>
    <label>MSA Level Letter</label>
    <type>TextArea</type>
</CustomField>