force-app/main/default/objects/MSA__c/fields/MSA_Name__c.field-meta.xml
<CustomField>
    <fullName>MSA_Name__c</fullName>
    <description>Metropolitan Statistical Area</description>
    <inlineHelpText>Metropolitan Statistical Area</inlineHelpText>
    <label>MSA Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>