force-app/main/default/objects/MSA__c/fields/MSA_Number__c.field-meta.xml
<CustomField>
    <fullName>MSA_Number__c</fullName>
    <label>MSA Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>