force-app/main/default/objects/MSA__c/fields/MSA_Type__c.field-meta.xml
<CustomField>
    <fullName>MSA_Type__c</fullName>
    <description>Metropolitan Statistical Area Type</description>
    <inlineHelpText>Metropolitan Statistical Area Type</inlineHelpText>
    <label>MSA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>PMSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>