force-app/main/default/objects/MSA__c/fields/PMSA_Name__c.field-meta.xml
<CustomField>
    <fullName>PMSA_Name__c</fullName>
    <description>Primary Metropolitan Statistical Area Name</description>
    <inlineHelpText>Primary Metropolitan Statistical Area Name</inlineHelpText>
    <label>PMSA Name</label>
    <type>TextArea</type>
</CustomField>