force-app/main/default/objects/MSA__c/fields/PMSA_Number__c.field-meta.xml
<CustomField>
    <fullName>PMSA_Number__c</fullName>
    <label>PMSA Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>