force-app/main/default/objects/MSA__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>