force-app/main/default/objects/MSA__c/fields/Zip_Population__c.field-meta.xml
<CustomField>
    <fullName>Zip_Population__c</fullName>
    <description>Population within the Zip Code</description>
    <inlineHelpText>Population within the Zip Code</inlineHelpText>
    <label>Zip Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>