force-app/main/default/objects/MSA__c/fields/Zip_Type__c.field-meta.xml
<CustomField>
    <fullName>Zip_Type__c</fullName>
    <label>Zip Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>