force-app/main/default/objects/MSA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MSA_Name__c</columns>
    <columns>County__c</columns>
    <columns>City__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Area_Code__c</columns>
    <columns>State_Code__c</columns>
    <columns>Zip_Population__c</columns>
    <columns>Zip_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>